review restaurants bottom text visibility fix

--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -10,6 +10,11 @@ body {
 	float: right;
 }
 
+.rr-descr,
+.rcc-info {
+	margin-top: 20px;
+}
+
 .categ {
 	font-size: 17px;
 }
